Add user creation and JWT token generation

--- a/Authorization/Authorization.API/appsettings.json
+++ b/Authorization/Authorization.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthorizationDB": "Server=docker-authorization-db,1433;Database=Authorization;User=sa;Password={0};TrustServerCertificate=true"
+    "AuthorizationDB": "Server=authorization-db;Database=Authorization;User Id=sa;Password=SenhaMuitoFod@;TrustServerCertificate=True;"
   }
 }
