--- a/Authorization/Authorization.Infrastructure/Authorization.Infrastructure.csproj
+++ b/Authorization/Authorization.Infrastructure/Authorization.Infrastructure.csproj
@@ -20,4 +20,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Authorization.Core\Authorization.Core.csproj" />
+    </ItemGroup>
+
 </Project>
