User service refactored

--- a/UserService/UserService.API/appsettings.json
+++ b/UserService/UserService.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthorizationDB": "Server=localhost,1433;Database=Users;User Id=sa;Password=SenhaMuitoFod@;TrustServerCertificate=True;"
+    "UserServiceDb": "Server=localhost,1433;Database=Users;User Id=sa;Password=SenhaMuitoFod@;TrustServerCertificate=True;"
   }
 }
