auth service and user service refactored

--- a/Authorization/Authorization.API/Authorization.API.csproj
+++ b/Authorization/Authorization.API/Authorization.API.csproj
@@ -8,12 +8,17 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Authorization.Core\Authorization.Core.csproj" />
-      <ProjectReference Include="..\Authorization.Infrastructure\Authorization.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Controllers\AuthorizationController.cs" />
     </ItemGroup>
 
 </Project>
