--- a/Authorization/docker-compose.yml
+++ b/Authorization/docker-compose.yml
@@ -6,4 +6,10 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
     ports:
-      - "5001:8181"
+      - "5001:8080"
+    networks:
+      - animal-draw-game-network
+
+networks:
+  animal-draw-game-network:
+    external: true
