--- a/DrawService/DrawService.Worker/DrawService.Worker.csproj
+++ b/DrawService/DrawService.Worker/DrawService.Worker.csproj
@@ -10,4 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DrawService.Core\DrawService.Core.csproj" />
+      <ProjectReference Include="..\DrawService.Infrastructure\DrawService.Infrastructure.csproj" />
+    </ItemGroup>
 </Project>
