Dockerfile created and docker-compose updated

--- a/DrawService/DrawService.Worker/appsettings.json
+++ b/DrawService/DrawService.Worker/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "RabbitMq": {
-    "HostName": "localhost",
+    "HostName": "rabbit-mq-service:5672",
     "QueueName": "DrawnNumbers"
   }
 }
