BetService now needs JWT Token to requisitions

--- a/BetService/BetService.API/appsettings.json
+++ b/BetService/BetService.API/appsettings.json
@@ -10,5 +10,8 @@
     "ConnectionString": "mongodb://admin:adminpass@localhost:27017",
     "DatabaseName": "UserBet",
     "BetsCollectionName": "Bets"
+  },
+  "JWT": {
+    "Secret": "QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm,1234567890AOkopvdnsioHGYUASGVBI"
   }
 }
