BetService is doing a bet but the validations isnt done yet

--- a/BetService/BetService.API/appsettings.json
+++ b/BetService/BetService.API/appsettings.json
@@ -13,5 +13,9 @@
   },
   "JWT": {
     "Secret": "QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm,1234567890AOkopvdnsioHGYUASGVBI"
+  },
+  "RabbitMq": {
+    "HostName": "rabbit-mq-service:5672",
+    "QueueName": "UsersBets"
   }
 }
