--- a/BetService/BetService.Infrastructure/BetService.Infrastructure.csproj
+++ b/BetService/BetService.Infrastructure/BetService.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
       <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
 
     <ItemGroup>
