--- a/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
+++ b/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
@@ -19,6 +19,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.8" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
 
     <ItemGroup>
