now validation are publishing response in queue

--- a/src/UserService/UserService.Worker/appsettings.json
+++ b/src/UserService/UserService.Worker/appsettings.json
@@ -11,6 +11,11 @@
         "Name": "UserQueue",
         "HostName": "rabbit-mq-service:5672",
         "Exchange": "userBet"
+      },
+      {
+        "Name": "UserBetValidation",
+        "HostName": "rabbit-mq-service:5672",
+        "Exchange": "userBet"
       }
     ]
   }
