BetService is done with validation

--- a/.gitignore
+++ b/.gitignore
@@ -490,6 +490,7 @@ ASALocalRun/
 
 # Visual Studio History (VSHistory) files
 .vshistory/
+scripts/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
