--- a/src/BetService/BetService.API/appsettings.json
+++ b/src/BetService/BetService.API/appsettings.json
@@ -14,8 +14,13 @@
   "JWT": {
     "Secret": "QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm,1234567890AOkopvdnsioHGYUASGVBI"
   },
-  "RabbitMq": {
-    "HostName": "rabbit-mq-service:5672",
-    "QueueName": "UsersBets"
+  "MessagingSettings": {
+    "Queues": [
+      {
+        "Name": "UserQueue",
+        "HostName": "rabbit-mq-service:5672",
+        "Exchange": "userBet"
+      }
+    ]
   }
 }
